--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "mvl-blank-project",
-  "version": "0.0.1",
+  "name": "mvl-botcms-common-semis",
+  "version": "1.0.0",
   "description": "",
-  "main": "src/mvlblankproject.js",
+  "main": "src/botcmscommonsemis.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "mvloader": "git+https://github.com/mvoevodskiy/mvloader.git",
-    "mvtools": "git+https://github.com/mvoevodskiy/mvtools.git"
+    "mvloader": "^1.0.0",
+    "mvtools": "^1.0.0"
   },
   "devDependencies": {},
   "author": "mvoevodskiy",
