--- a/src/botschemas/lexicons.yml
+++ b/src/botschemas/lexicons.yml
@@ -1,28 +1,51 @@
-lexicons:
-  ru:
-    common:
+ru:
+  common:
+    msg:
+      action:
+        find: Введите запрос для поиска
+        choose_from_list: Выберите из списка
+        unknown: Неизвестное действие
+      requests:
+        start: Ответьте на несколько вопросов.
+        profile:
+          firstName: Введите имя
+          secondName: Введите отчество
+          lastName: Введите фамилию
+          phone: Введите номер телефона
+          mobilephone: Введите номер мобильного телефона
+      nothing_found: Ничего не найдено
+      details: Информация об объекте
+      unknown_try: Не распознано, повторите
+      registration: 📲 Регистрация
+      welcome: Добро пожаловать!
+      welcomeRegister: |
+        Добро пожаловать!
+        Для начала работы пройдите регистрацию.
+      mainChooseAction: Вы в главном меню. Выберите интересующий раздел или действие.
+    btn:
+      menu:
+        main: 📱 Главное меню
+        back: ↩️ Назад
+        manage: ⚙️ Управление
+        reports: 📊 Отчеты
+        registration: 📲 Регистрация
+        faq: Частые вопросы
+        info: Информация
+        aboutProject: О проекте
+        aboutBot: Об этом боте
+        forWhatThis: Для чего это?
+      action:
+        register: 📲 Зарегистрироваться
+        add: 📥 Добавить
+        remove: 🗑 Удалить
+        find: 🔍 Найти
+        search: 🔍 Поиск
+        enable_disable: 🌓 Включить / Отключить
+        edit: ✏️ Редактировать
       msg:
-        action:
-          find: Введите запрос для поиска
-          choose_from_list: Выберите из списка
-          unknown: Неизвестное действие
-        nothing_found: Ничего не найдено
-        details: Информация об объекте
-        unknown_try: Не распознано, повторите
-      btn:
-        menu:
-          main: 📱 Главное меню
-          back: ↩️ Назад
-          manage: ⚙️ Управление
-          reports: 📊 Отчеты
-          registration: 📲 Регистрация
-        action:
-          add: 📥 Добавить
-          remove: 🗑 Удалить
-          find: 🔍 Найти
-          search: 🔍 Поиск
-          enable_disable: 🌓 Включить / Отключить
-          edit: ✏️ Редактировать
-        msg:
-          yes: ✅ Да
-          no: ❌ Нет
+        yes: ✅ Да
+        no: ❌ Нет
+    section:
+      section: Раздел
+      help: Раздел помощи
+      manage: Раздел настроек и параметров
