--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "mvloader": "^1.0.0",
-    "mvtools": "^1.0.0"
+    "mvloader": "^1.0.0"
   },
   "devDependencies": {},
   "author": "mvoevodskiy",
