--- a/src/botschemas/lexicons.yml
+++ b/src/botschemas/lexicons.yml
@@ -13,7 +13,20 @@ ru:
           lastName: Введите фамилию
           phone: Введите номер телефона
           mobilephone: Введите номер мобильного телефона
+          country: Введите название страны
+          region: Введите название региона
+          city: Введите город
+          address: Введите адрес
+          street: Введите название улицы
+          building: Введите номер дома (строения)
+          floor: ВВедите этаж
+          flat: Введите номер квартиры
+          office: Введите номер офиса
+          room: Введите номер комнаты
       nothing_found: Ничего не найдено
+      nothing:
+        found: Ничего не найдено
+        selected: Ничего не выбрано
       details: Информация об объекте
       unknown_try: Не распознано, повторите
       registration: 📲 Регистрация
@@ -21,19 +34,26 @@ ru:
       welcomeRegister: |
         Добро пожаловать!
         Для начала работы пройдите регистрацию.
+      successRegister: Регистрация прошла успешно!
       mainChooseAction: Вы в главном меню. Выберите интересующий раздел или действие.
+      cityChooseFromListOrEnter: |
+        Выберите город из списка.
+        Если показанные города не подходят или их нет, введите новый запрос.
     btn:
       menu:
         main: 📱 Главное меню
         back: ↩️ Назад
         manage: ⚙️ Управление
+        settings: ⚙️ Настройки
         reports: 📊 Отчеты
         registration: 📲 Регистрация
-        faq: Частые вопросы
-        info: Информация
-        aboutProject: О проекте
-        aboutBot: Об этом боте
-        forWhatThis: Для чего это?
+        faq: ⁉️ Частые вопросы
+        info: ℹ️ Информация
+        aboutProject: 🗨 О проекте
+        aboutBot: 👁‍🗨 Об этом боте
+        forWhatThis: ❔ Для чего это?
+        blackList: 🧟‍♂️🧟‍♂️ Черный список
+        feedback: 📝 Обратная связь
       action:
         register: 📲 Зарегистрироваться
         add: 📥 Добавить
@@ -42,9 +62,12 @@ ru:
         search: 🔍 Поиск
         enable_disable: 🌓 Включить / Отключить
         edit: ✏️ Редактировать
+        addBlackList: ➕🧟‍♂️️ Добавить в ЧС
       msg:
         yes: ✅ Да
         no: ❌ Нет
+        next: ➡️ Далее
+        prev: ⬅️ Назад
     section:
       section: Раздел
       help: Раздел помощи
