Added lexicon entries

--- a/src/botschemas/lexicons.yml
+++ b/src/botschemas/lexicons.yml
@@ -7,7 +7,25 @@ ru:
         unknown: Неизвестное действие
       requests:
         start: Ответьте на несколько вопросов.
-        profile:
+      profile:
+        edit: Редактировать профиль
+        fields:
+          firstName: Имя
+          secondName: Отчество
+          lastName: Фамилия
+          phone: Номер телефона
+          mobilephone: Номер мобильного телефона
+          country: Страна
+          region: Регион
+          city: Город
+          address: Адрес
+          street: Название улицы
+          building: Номер дома (строения)
+          floor: Этаж
+          flat: Номер квартиры
+          office: Номер офиса
+          room: Номер комнаты
+        requests:
           firstName: Введите имя
           secondName: Введите отчество
           lastName: Введите фамилию
@@ -28,6 +46,7 @@ ru:
         found: Ничего не найдено
         selected: Ничего не выбрано
       details: Информация об объекте
+      saved: Сохранено
       unknown_try: Не распознано, повторите
       registration: 📲 Регистрация
       welcome: Добро пожаловать!
@@ -57,11 +76,18 @@ ru:
       action:
         register: 📲 Зарегистрироваться
         add: 📥 Добавить
+        accept: ✅ Принять
+        reject: ⛔️ Отклонить
         remove: 🗑 Удалить
         find: 🔍 Найти
         search: 🔍 Поиск
+        final: ✅ Завершить
         enable_disable: 🌓 Включить / Отключить
+        publish: 🔏 Опубликовать
+        unpublish: 🔐 Снять с публикации
+        publish_unpublish: ⏯ Опубликовать / Снять с публикации
         edit: ✏️ Редактировать
+        editProfile: ✍️ Редактировать профиль
         addBlackList: ➕🧟‍♂️️ Добавить в ЧС
       msg:
         yes: ✅ Да
