Added lixicon entries

--- a/src/botschemas/lexicons.yml
+++ b/src/botschemas/lexicons.yml
@@ -4,6 +4,8 @@ ru:
       action:
         find: Введите запрос для поиска
         choose_from_list: Выберите из списка
+        date_start: Введите дату начала
+        date_end: Введите дату окончания
         unknown: Неизвестное действие
       requests:
         start: Ответьте на несколько вопросов.
@@ -58,6 +60,11 @@ ru:
       cityChooseFromListOrEnter: |
         Выберите город из списка.
         Если показанные города не подходят или их нет, введите новый запрос.
+      reports: Отчёты
+      export_started: Экспорт записей запущен, по завершении файл будет отправлен
+      import_started: Импорт файла запущен, по завершении обновления записей в БД будет отправлено уведомление
+      export_finished: Экспорт записей завершен, файл отправлен
+      import_finished: Импорт файла завершен, записи в БД обновлены
     btn:
       menu:
         main: 📱 Главное меню
