Added lexicon entries

--- a/src/botschemas/lexicons.yml
+++ b/src/botschemas/lexicons.yml
@@ -27,6 +27,15 @@ ru:
           flat: Номер квартиры
           office: Номер офиса
           room: Номер комнаты
+          vk: ВКонтакте
+          fb: Facebook
+          ig: Instagram
+          ok: Одноклассниках
+          tg: Telegram
+          tw: Twittter
+          tt: TikTok
+          wa: WhatsApp
+          vb: Viber
         requests:
           firstName: Введите имя
           secondName: Введите отчество
@@ -43,6 +52,15 @@ ru:
           flat: Введите номер квартиры
           office: Введите номер офиса
           room: Введите номер комнаты
+          vk: Введите ссылку на профиль ВКонтакте
+          fb: Введите ссылку на профиль в Facebook
+          ig: Введите ссылку на профиль в Instagram
+          ok: Введите ссылку на профиль о Одноклассниках
+          tg: Введите ссылку на профиль в Telegram
+          tw: Введите ссылку на профиль в Twittter
+          tt: Введите ссылку на профиль в TikTok
+          wa: Введите ссылку номер телефона в WhatsApp
+          vb: Введите ссылку номер телефона в Viber
       nothing_found: Ничего не найдено
       nothing:
         found: Ничего не найдено
@@ -88,6 +106,7 @@ ru:
         remove: 🗑 Удалить
         find: 🔍 Найти
         search: 🔍 Поиск
+        skip: ⭕️ Пропустить
         final: ✅ Завершить
         enable_disable: 🌓 Включить / Отключить
         publish: 🔏 Опубликовать
@@ -96,6 +115,7 @@ ru:
         edit: ✏️ Редактировать
         editProfile: ✍️ Редактировать профиль
         addBlackList: ➕🧟‍♂️️ Добавить в ЧС
+        restartBot: 💫 Перезапустить бота
       msg:
         yes: ✅ Да
         no: ❌ Нет
