--- a/src/botschemas/keyboards.yml
+++ b/src/botschemas/keyboards.yml
@@ -11,6 +11,11 @@ backMain:
     - common.btn.menu.back
     - common.btn.menu.main
 
+cancelMain:
+  buttons:
+    - common.btn.action.cancel
+    - common.btn.menu.main
+
 skipMain:
   buttons:
     - common.btn.action.skip
