Moved ru lexicon entries to separate file

--- a/src/botschemas/lexicons.yml
+++ b/src/botschemas/lexicons.yml
@@ -1,139 +1,1 @@
-ru:
-  common:
-    msg:
-      action:
-        find: Введите запрос для поиска
-        choose_from_list: Выберите из списка
-        date_start: Введите дату начала
-        date_end: Введите дату окончания
-        unknown: Неизвестное действие
-      requests:
-        start: Ответьте на несколько вопросов.
-      profile:
-        edit: Редактировать профиль
-        fields:
-          firstName: Имя
-          secondName: Отчество
-          lastName: Фамилия
-          phone: Номер телефона
-          mobilephone: Номер мобильного телефона
-          country: Страна
-          region: Регион
-          city: Город
-          address: Адрес
-          street: Название улицы
-          building: Номер дома (строения)
-          floor: Этаж
-          flat: Номер квартиры
-          office: Номер офиса
-          room: Номер комнаты
-          vk: ВКонтакте
-          fb: Facebook
-          ig: Instagram
-          ok: Одноклассниках
-          tg: Telegram
-          tw: Twittter
-          tt: TikTok
-          wa: WhatsApp
-          vb: Viber
-        requests:
-          firstName: Введите имя
-          secondName: Введите отчество
-          lastName: Введите фамилию
-          phone: Введите номер телефона
-          mobilephone: Введите номер мобильного телефона
-          country: Введите название страны
-          region: Введите название региона
-          city: Введите город
-          address: Введите адрес
-          street: Введите название улицы
-          building: Введите номер дома (строения)
-          floor: ВВедите этаж
-          flat: Введите номер квартиры
-          office: Введите номер офиса
-          room: Введите номер комнаты
-          vk: Введите ссылку на профиль ВКонтакте
-          fb: Введите ссылку на профиль в Facebook
-          ig: Введите ссылку на профиль в Instagram
-          ok: Введите ссылку на профиль о Одноклассниках
-          tg: Введите ссылку на профиль в Telegram
-          tw: Введите ссылку на профиль в Twittter
-          tt: Введите ссылку на профиль в TikTok
-          wa: Введите ссылку номер телефона в WhatsApp
-          vb: Введите ссылку номер телефона в Viber
-      nothing_found: Ничего не найдено
-      nothing:
-        found: Ничего не найдено
-        selected: Ничего не выбрано
-      details: Информация об объекте
-      saved: Сохранено
-      unknown_try: Не распознано, повторите
-      registration: 📲 Регистрация
-      welcome: Добро пожаловать!
-      welcomeRegister: |
-        Добро пожаловать!
-        Для начала работы пройдите регистрацию.
-      successRegister: Регистрация прошла успешно!
-      mainChooseAction: Вы в главном меню. Выберите интересующий раздел или действие.
-      cityChooseFromListOrEnter: |
-        Выберите город из списка.
-        Если показанные города не подходят или их нет, введите новый запрос.
-      reports: Отчёты
-      export_started: Экспорт записей запущен, по завершении файл будет отправлен
-      import_started: Импорт файла запущен, по завершении обновления записей в БД будет отправлено уведомление
-      export_finished: Экспорт записей завершен, файл отправлен
-      import_finished: Импорт файла завершен, записи в БД обновлены
-    btn:
-      menu:
-        main: 📱 Главное меню
-        back: ↩️ Назад
-        manage: ⚙️ Управление
-        settings: ⚙️ Настройки
-        reports: 📊 Отчеты
-        registration: 📲 Регистрация
-        faq: ⁉️ Частые вопросы
-        info: ℹ️ Информация
-        aboutProject: 🗨 О проекте
-        aboutBot: 👁‍🗨 Об этом боте
-        forWhatThis: ❔ Для чего это?
-        blackList: 🧟‍♂️🧟‍♂️ Черный список
-        feedback: 📝 Обратная связь
-      action:
-        register: 📲 Зарегистрироваться
-        add: 📥 Добавить
-        create: ✅ Создать
-        accept: ✅ Принять
-        reject: ⛔️ Отклонить
-        clear: 🗑 Очистить
-        remove: 🗑 Удалить
-        show: 👀 Показать
-        find: 🔍 Найти
-        search: 🔍 Поиск
-        skip: ⭕️ Пропустить
-        cancel: 🚫 Отменить
-        final: ✅ Завершить
-        enable_disable: 🌓 Включить / Отключить
-        publish: 🔏 Опубликовать
-        unpublish: 🔐 Снять с публикации
-        publish_unpublish: ⏯ Опубликовать / Снять с публикации
-        edit: ✏️ Редактировать
-        editProfile: ✍️ Редактировать профиль
-        addBlackList: ➕🧟‍♂️️ Добавить в ЧС
-        restartBot: 💫 Перезапустить бота
-      msg:
-        yes: ✅ Да
-        no: ❌ Нет
-        next: ➡️ Далее
-        prev: ⬅️ Назад
-      days:
-        yesterday: Вчера
-        today: Сегодня
-        tomorrow: Завтра
-        thisWeek: На этой неделе
-        nextWeek: На следующей неделе
-        afterWeek: Через неделю
-    section:
-      section: Раздел
-      mainMenu: Главное меню
-      help: Раздел помощи
-      manage: Раздел настроек и параметров
+ru: $FILE ./lexicons-ru.yml
