--- a/src/botschemas/lexicons-ru.yml
+++ b/src/botschemas/lexicons-ru.yml
@@ -14,6 +14,7 @@ common:
         firstName: Имя
         secondName: Отчество
         lastName: Фамилия
+        gender: Пол
         phone: Номер телефона
         mobilephone: Номер мобильного телефона
         country: Страна
@@ -39,6 +40,7 @@ common:
         firstName: Введите имя
         secondName: Введите отчество
         lastName: Введите фамилию
+        gender: Укажите пол
         phone: Введите номер телефона
         mobilephone: Введите номер мобильного телефона
         country: Введите название страны
@@ -68,6 +70,8 @@ common:
     saved: Сохранено
     unknown_try: Не распознано, повторите
     registration: 📲 Регистрация
+    registrationSuccess: Поздравляем, регистрация прошла успешно!
+    registrationFailure: При регистрации произошла ошибка
     welcome: Добро пожаловать!
     welcomeRegister: |
       Добро пожаловать!
@@ -131,6 +135,12 @@ common:
       thisWeek: На этой неделе
       nextWeek: На следующей неделе
       afterWeek: Через неделю
+    human:
+      gender:
+        male: 👨 Мужской
+        female: 👩‍🦱 Женский
+      male: 👨 Мужчина
+      female: 👩‍🦱 Женщинв
   section:
     section: Раздел
     mainMenu: Главное меню
