Added lexicon entries

--- a/src/botschemas/lexicons-ru.yml
+++ b/src/botschemas/lexicons-ru.yml
@@ -5,6 +5,9 @@ common:
       choose_from_list: Выберите из списка
       date_start: Введите дату начала
       date_end: Введите дату окончания
+      reason: Укажите причину
+      reasonReject: Укажите причину отказа
+      reasonApprove: Укажите причину одобрения
       unknown: Неизвестное действие
     requests:
       start: Ответьте на несколько вопросов.
@@ -122,6 +125,28 @@ common:
       fr: 🇫🇷 Франция
       jp: 🇯🇵 Япония
       ru: 🇷🇺 Россия
+    dates:
+      century: Век
+      year: Год
+      quarter: Квартал
+      month: Месяц
+      week: Неделя
+      day: День
+      centuries: Века
+      years: Годы
+      quarters: Кварталы
+      months: Месяцы
+      weeks: Недели
+      days: Дни
+    time:
+      day: Сутки
+      hour: Час
+      minute: Минута
+      second: Секунда
+      days: Сутки
+      hours: Часы
+      minutes: Минуты
+      seconds: Секунды
 
   btn:
     menu:
@@ -139,6 +164,7 @@ common:
       blackList: 🧟‍♂️🧟‍♂️ Черный список
       feedback: 📝 Обратная связь
       language: 🌐 Язык
+      list: 🧾 Список
     action:
       register: 📲 Зарегистрироваться
       add: 📥 Добавить
@@ -161,6 +187,9 @@ common:
       editProfile: ✍️ Редактировать профиль
       addBlackList: ➕🧟‍♂️️ Добавить в ЧС
       restartBot: 💫 Перезапустить бота
+      choose: ☑️Выбрать
+      go: ➡️ Перейти
+      check: ☑️ Проверить
     msg:
       yes: ✅ Да
       no: ❌ Нет
@@ -179,6 +208,15 @@ common:
         female: 👩‍🦱 Женский
       male: 👨 Мужчина
       female: 👩‍🦱 Женщина
+    math:
+      plus: Плюс
+      minus: Минус
+      multiplication: Умножение
+      division: Деление
+      plusIco: ➕
+      minusIco: ➖
+      multiplicationIco: ✖️
+      divisionIco: ➗
   section:
     section: Раздел
     mainMenu: Главное меню
