--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "mvloader": "^1.0.0"
+    "mvloader": "^1.0.10",
+    "mvtools": "^1.1.5"
   },
   "devDependencies": {},
   "author": "mvoevodskiy",
